# mtg-keep-or-mull

./: .flake8  .gitignore  .pre-commit-config.yaml  API.md  CLAUDE.md  DATA_TIER.md  FEATURE_ROADMAP.md  LICENSE-VCL  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
src/mtg_keep_or_mull/: __init__.py  card.py  datastore.py  deck.py  hand.py  models.py  mulligan.py  schema.sql
src/mtg_keep_or_mull/api/: __init__.py  app.py  dependencies.py  models.py
src/mtg_keep_or_mull/api/routers/: __init__.py  decisions.py  decks.py  sessions.py  statistics.py
tests/: __init__.py  test_api_app.py  test_api_decision_history.py  test_api_decision_reasoning.py  test_api_deck_filtering.py  test_api_deck_update.py  test_api_decks.py  test_api_keep_rate_by_depth.py  test_api_sessions.py  test_api_statistics.py  test_card.py  test_datastore_filtering.py  test_datastore_update_deck.py  test_deck.py  test_hand.py  test_json_datastore.py  test_mock_datastore.py  test_models_deck_metadata.py  test_mulligan_simulator.py  test_setup.py  test_sqlite_datastore.py
tests/fixtures/decks/: affinity_grixis.txt  mono_u_terror.txt  pauper_elves.txt  sproling_sprout_swarm.txt
