[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-keep-or-mull"
version = "0.1.0"
description = "MTG mulligan practice simulator - helps players train mulligan decisions and track statistics"
readme = "README.md"
license = {text = "MIT / VCL-Experimental-v0.1"}
authors = [
    {name = "Vibe-Coder 1.z3r0", email = "vibecoder.1.z3r0@gmail.com"}
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
# Database backend dependencies (optional - install as needed)
postgres = [
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "mysql-connector-python>=8.0.0",
]
# Install all database backends
databases = [
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/vibecoder-1z3r0/mtg-keep-or-mull"
Repository = "https://github.com/vibecoder-1z3r0/mtg-keep-or-mull"
Issues = "https://github.com/vibecoder-1z3r0/mtg-keep-or-mull/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mtg_keep_or_mull",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Temporarily disabled until we have actual code to cover
    # "--cov-fail-under=80",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pylint configuration
[tool.pylint.main]
py-version = "3.10"
jobs = 0
source-roots = ["src"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "unnecessary-ellipsis",
    "line-too-long",  # black handles line length
    "protected-access",  # tests need to access internal state
    "duplicate-code",  # acceptable in tests for setup/fixture code
    "import-error",  # optional dependencies (pytest, psycopg2, mysql) may not be installed
    "import-outside-toplevel",  # lazy imports for optional dependencies
    "too-many-positional-arguments",  # database constructors need many parameters
]

[tool.pylint.imports]
ignored-modules = ["pydantic"]

[tool.pylint.format]
max-line-length = 100

# AIA: Primarily AI, Human-initiated, Reviewed, Claude Code Web [Sonnet 4.5] v1.0
